# skim-mcp

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  COMPARISON.md  CONTRIBUTING.md  DESIGN.md  LICENSE  NOTICE  README.md  RELEASING.md  SECURITY.md  bench.py  benchmarks.py  check_invariant.py  compare.py  demo.py  perf.py  pyproject.toml  server.json  skim_report.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: demo.tape
eval/: ACCURACY.md  QUESTIONS.md  accuracy_bench.py  edgecases.py  score_expand_loop.py  widget.py
src/skim/: __init__.py  install.py  logpath.py  meter.py  retain.py  server.py  skeleton.py  templater.py  tokens.py  verify.py
tests/: conftest.py  helpers.py  test_eval_premise.py  test_generic.py  test_install.py  test_invariants.py  test_logpath.py  test_meter.py  test_multilang.py  test_patch.py  test_regressions.py  test_retain.py  test_server.py  test_skeleton.py  test_templater.py  test_tokens.py  test_verify.py
