[project]
name = "skim-mcp"
version = "0.1.1"
description = "Token-efficient skim-then-expand I/O for agentic models (Claude Code / desktop Claude) via MCP"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["mcp", "llm", "claude", "context", "compression", "tokens", "agent", "skim"]
authors = [{ name = "skim contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = ["mcp>=1.0"]

[project.optional-dependencies]
tokens = ["tiktoken>=0.7"]                                  # exact-ish token counts (else heuristic)
lang = ["tree-sitter>=0.23", "tree-sitter-language-pack>=1.0"]   # multi-language code skeletons (~15 langs wired; pack ships ~300 grammars)
dev = ["pytest>=8.0", "pytest-cov>=5.0", "hypothesis>=6.100", "tiktoken>=0.7",
       "tree-sitter>=0.23", "tree-sitter-language-pack>=1.0"]

[project.urls]
Homepage = "https://github.com/helloderekg/skim-mcp"
Repository = "https://github.com/helloderekg/skim-mcp"
Issues = "https://github.com/helloderekg/skim-mcp/issues"
Changelog = "https://github.com/helloderekg/skim-mcp/blob/main/CHANGELOG.md"

[project.scripts]
skim-mcp = "skim.server:main"
skim-meter = "skim.meter:main"       # live token-savings dashboard (uv run skim-meter)
skim-verify = "skim.verify:main"     # falsify the lossless contract on your own files

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
